Update composer package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fabien/ps-core-legacy",
+    "name": "fpt/ps-core-legacy",
     "type": "library",
     "license": "MIT",
     "authors": [
